--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo app</title>
 
-    <link rel="stylesheet" href="null.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./assets/null.css">
+    <link rel="stylesheet" href="./assets/styles.css">
 
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -26,7 +26,7 @@
                     <input name="todo" placeholder="Text input" class="input" type="text" />
                     <button class="add">Add</button>
                 </form>
-                <ul class="todosList">
+                <ul class="tasksList">
 
                 </ul>
                 <div class="clear">
