--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                     <input name="todo" placeholder="Text input" class="input" type="text" />
                     <button class="add">Add</button>
                 </form>
+                <div class="filter">
+                    <p>Filter</p>
+                    <select name="" id="" class="filter">
+                        <option value="all">All</option>
+                        <option value="completed">Completed</option>
+                        <option value="inProgress">In progress</option>
+                    </select>
+                </div>
                 <ul class="tasksList">
 
                 </ul>
